fix i guess but still off center on iphone6

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,13 +69,15 @@ html {
   border:transparent;
   text-align:center;
   margin-left:auto;
-  margin-right:auto;
+  margin-right:auto
 }
-
+#mainButton:hover{
+  background-color:White;
+}
 #mainButton img{
   width:2vmax;
   height: 2vmax;
-  padding:auto;
+  margin:auto;
 }
 
 #mainButton{
